--- a/autocolor/locale/en/en.cfg
+++ b/autocolor/locale/en/en.cfg
@@ -9,5 +9,5 @@ autocolor_on=Automatically set color
 autocolor_r=The amount of red that should be used. Higher values result in a redder color(0 - 255)
 autocolor_g=The amount of green that should be used. Higher values result in a greener color(0 - 255)
 autocolor_b=The amount of blue that should be used. Higher values result in a bluewer color(0 - 255)
-autocolor_a=How opague the color should appear. Higher values result in a more pronounced color(0-255)
+autocolor_a=How opague the color should appear. Higher values result in a more pronounced color(0-255). Recommended to keep at 127
 autocolor_on=Whether or not autocolor should do its thing
